fine tune dtos